add the tokenizer

--- a/gpt_for_gcolab.ipynb
+++ b/gpt_for_gcolab.ipynb
@@ -19,10 +19,8 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
+      "id": "pljsq0GJwLkn",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -30,21 +28,30 @@
         "id": "pljsq0GJwLkn",
         "outputId": "84f44f66-1d03-404c-b9cc-53cb716812f8"
       },
-      "id": "pljsq0GJwLkn",
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "c3YY76TpwIiP",
+      "metadata": {
+        "id": "c3YY76TpwIiP"
+      },
+      "outputs": [],
       "source": [
+        "import regex as re\n",
         "class FeedForward(nn.Module):\n",
         "    n_emb: int\n",
         "\n",
@@ -126,21 +133,86 @@
         "            key, subkey = jax.random.split(key)\n",
         "            idx_next = jax.random.categorical(subkey, logits, shape=(logits.shape[0],1))\n",
         "            idx = jnp.concatenate([idx, idx_next], axis=1).astype(int)\n",
-        "        return idx\n"
-      ],
-      "metadata": {
-        "id": "c3YY76TpwIiP"
-      },
-      "id": "c3YY76TpwIiP",
-      "execution_count": null,
-      "outputs": []
+        "        return idx\n",
+        "\n",
+        "def get_stats(ids, counts=None):\n",
+        "    counts = {} if counts is None else counts\n",
+        "    for pair in zip(ids, ids[1:]): # iterate consecutive elements\n",
+        "        counts[pair] = counts.get(pair, 0) + 1\n",
+        "    return counts\n",
+        "\n",
+        "def merge(ids, pair, idx):\n",
+        "  newids = []\n",
+        "  i = 0\n",
+        "  while i < len(ids):\n",
+        "    if i < len(ids) - 1 and ids[i] == pair[0] and ids[i+1] == pair[1]:\n",
+        "      newids.append(idx)\n",
+        "      i += 2\n",
+        "    else:\n",
+        "      newids.append(ids[i])\n",
+        "      i += 1\n",
+        "  return newids\n",
+        "\n",
+        "class RegexTokenizer:\n",
+        "    GPT4_SPLIT_PATTERN = r\"\"\"'(?i:[sdmt]|ll|ve|re)|[^\\r\\n\\p{L}\\p{N}]?+\\p{L}+|\\p{N}{1,3}| ?[^\\s\\p{L}\\p{N}]++[\\r\\n]*|\\s*[\\r\\n]|\\s+(?!\\S)|\\s+\"\"\"\n",
+        "    compiled_patten = re.compile(GPT4_SPLIT_PATTERN)\n",
+        "\n",
+        "    def train(self, text, vocab_size):\n",
+        "        broken_text = re.findall(self.compiled_patten, text)\n",
+        "        ids = [list(ch.encode('utf-8')) for ch in broken_text]\n",
+        "\n",
+        "        num_merges = vocab_size - 256\n",
+        "        self.merges = {} # (int, int) -> int\n",
+        "        vocab = {idx: bytes([idx]) for idx in range(256)}\n",
+        "        for i in range(num_merges):\n",
+        "            stats = {}\n",
+        "            for ch_ids in ids:\n",
+        "                get_stats(ch_ids, stats)\n",
+        "            if not stats:\n",
+        "                print(stats, ids)\n",
+        "            pair = max(stats, key=stats.get)\n",
+        "            idx = 256 + i\n",
+        "            ids = [merge(chunk_ids, pair, idx) for chunk_ids in ids]\n",
+        "            vocab[idx] = vocab[pair[0]] + vocab[pair[1]]\n",
+        "            print(f\"merging {vocab[idx]} into a new token {idx}\")\n",
+        "            self.merges[pair] = idx\n",
+        "\n",
+        "    def encode(self, text):\n",
+        "      tokens = list(text.encode(\"utf-8\"))\n",
+        "      # go through merges in the order they were generated\n",
+        "      for pair in self.merges:\n",
+        "          new_tokens = []\n",
+        "          i = 0\n",
+        "          while i < len(tokens):\n",
+        "              if i < len(tokens) - 1 and (tokens[i],tokens[i+1]) == pair:\n",
+        "                  new_tokens.append(self.merges[pair])\n",
+        "                  i += 2\n",
+        "                  continue\n",
+        "              new_tokens.append(tokens[i])\n",
+        "              i += 1\n",
+        "          tokens = new_tokens\n",
+        "      return tokens\n",
+        "\n",
+        "    def decode(self, ids):\n",
+        "        rev_merge = {v:k for k,v in self.merges.items()}\n",
+        "        def rec(subids, out=[]):\n",
+        "            for id in subids:\n",
+        "                if id < 256:\n",
+        "                    out.append(id)\n",
+        "                else:\n",
+        "                    if id in rev_merge:\n",
+        "                        rec(rev_merge[id], out)\n",
+        "            return out\n",
+        "        out = rec(ids)\n",
+        "        out = b\"\".join([bytes([x]) for x in out])\n",
+        "        return out.decode('utf-8', errors='replace')\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# we always start with a dataset to train on. let's download the tiny shakespeare dataset\n",
-        "!wget https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt"
-      ],
+      "execution_count": null,
+      "id": "dOAkxy9-wTqq",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -148,12 +220,10 @@
         "id": "dOAkxy9-wTqq",
         "outputId": "9dbbf071-d939-4cb1-915d-fe4028ff91c1"
       },
-      "id": "dOAkxy9-wTqq",
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2025-04-25 07:10:17--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
@@ -168,6 +238,10 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# we always start with a dataset to train on. let's download the tiny shakespeare dataset\n",
+        "!wget https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt"
       ]
     },
     {
@@ -182,15 +256,19 @@
         "with open('/content/drive/MyDrive/smiles.txt', 'r', encoding='utf-8') as f:\n",
         "    text = f.read()\n",
         "\n",
-        "chars = sorted(list(set(text)))\n",
-        "vocab_size = len(chars)\n",
-        "\n",
-        "stoi = {c:i for i,c in enumerate(chars)}\n",
-        "itos = {i:c for i,c in enumerate(chars)}\n",
-        "encode = lambda s: [stoi[c] for c in s]\n",
-        "decode = lambda l: \"\".join([itos[i] for i in l])\n",
-        "\n",
-        "data = jnp.array(encode(text), dtype=jnp.int32)\n",
+        "vocab_size = 500\n",
+        "tokenizer = RegexTokenizer()\n",
+        "tokenizer.train(text[:1_000_000], vocab_size)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d58611f3",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data = jnp.array(tokenizer.encode(text), dtype=jnp.int32)\n",
         "n = int(0.9*len(data)) # first 90% will be train, rest val\n",
         "train_data = data[:n]\n",
         "val_data = data[n:]"
@@ -309,6 +387,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "hNyC4uxS8ZPo",
+      "metadata": {
+        "id": "hNyC4uxS8ZPo"
+      },
+      "outputs": [],
       "source": [
         "tx = optax.adam(learning_rate=learning_rate)\n",
         "opt_state = tx.init(params)\n",
@@ -319,13 +403,7 @@
         "    updates, opt_state = tx.update(grads, opt_state)\n",
         "    params = optax.apply_updates(params, updates)\n",
         "    return loss, params, opt_state\n"
-      ],
-      "metadata": {
-        "id": "hNyC4uxS8ZPo"
-      },
-      "id": "hNyC4uxS8ZPo",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -341,22 +419,22 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "  0%|          | 4/5000 [00:07<1:58:00,  1.42s/it] "
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Training loss: 0.45827242732048035, Validation loss: 0.4805230498313904\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             " 11%|█▏        | 564/5000 [00:48<05:25, 13.61it/s]Exception ignored in: <function _xla_gc_callback at 0x799dcd5e4400>\n",
             "Traceback (most recent call last):\n",
@@ -368,9 +446,9 @@
           ]
         },
         {
-          "output_type": "error",
           "ename": "KeyboardInterrupt",
           "evalue": "",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -423,6 +501,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "-i1bXeRS4TEF",
+      "metadata": {
+        "id": "-i1bXeRS4TEF"
+      },
+      "outputs": [],
       "source": [
         "from functools import partial\n",
         "\n",
@@ -471,24 +555,12 @@
         "    full_seq = jnp.concatenate([context, gen_seq], axis=1)  # (B, T0 + max_new_tokens)\n",
         "\n",
         "    return full_seq, new_tokens"
-      ],
-      "metadata": {
-        "id": "-i1bXeRS4TEF"
-      },
-      "id": "-i1bXeRS4TEF",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "batch_size = 1\n",
-        "init       = jnp.zeros((batch_size, 1), dtype=jnp.int32)  # start with BOS token\n",
-        "key, subkey = jax.random.split(key)\n",
-        "\n",
-        "full_ids, tokens = generate_batch(params, init, subkey, 2000)\n",
-        "print(decode(full_ids[0].tolist()))  # your generated text"
-      ],
+      "execution_count": null,
+      "id": "Jzk4rR5-6BFi",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -496,12 +568,10 @@
         "id": "Jzk4rR5-6BFi",
         "outputId": "9a97d18e-234d-439f-ba62-1ead7a84550a"
       },
-      "id": "Jzk4rR5-6BFi",
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "Cc1c-2c(cn1c3ccc(cc3)C2=O)F\n",
@@ -550,20 +620,33 @@
             "CCOC(=O)C1=C(NC(=O)N[C@]12CC[C@H]([C@@H]1C2)C(=O)Nc3ccc\n"
           ]
         }
+      ],
+      "source": [
+        "batch_size = 1\n",
+        "init       = jnp.zeros((batch_size, 1), dtype=jnp.int32)  # start with BOS token\n",
+        "key, subkey = jax.random.split(key)\n",
+        "\n",
+        "full_ids, tokens = generate_batch(params, init, subkey, 2000)\n",
+        "print(tokenizer.decode(full_ids[0].tolist()))  # your generated text"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "id": "6eFTZ8Ue6ipD",
       "metadata": {
         "id": "6eFTZ8Ue6ipD"
       },
-      "id": "6eFTZ8Ue6ipD",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "accelerator": "TPU",
+    "colab": {
+      "gpuType": "V28",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -579,12 +662,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.12.7"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "V28"
-    },
-    "accelerator": "TPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
