--- a/dev2.ipynb
+++ b/dev2.ipynb
@@ -464,7 +464,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "pytorchenv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
